# Rust-High-Performance-API-Server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benches/: api_bench.rs
src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
src/middleware/: auth.rs  logging.rs
tests/: integration_test.rs
