[package]
name = "rust-high-performance-api-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A high-performance RESTful API server built with Actix-web"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4.8"
actix-rt = "2.10"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"

# HTTP utilities
http = "1.1"

[dev-dependencies]
actix-web-httptest = "0.9"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "api_bench"
harness = false
